--- a/resources/metadata/whitesource.yaml
+++ b/resources/metadata/whitesource.yaml
@@ -144,7 +144,7 @@ spec:
           - STEPS
         default: https://saas.whitesourcesoftware.com/api
       - name: buildDescriptorExcludeList
-        type: '[]string'
+        type: "[]string"
         description: "List of build descriptors and therefore modules to exclude from the scan and assessment activities."
         mandatory: false
         scope:
@@ -154,21 +154,29 @@ spec:
       - name: orgToken
         type: string
         description: "WhiteSource token identifying your organization."
-        mandatory: true
         scope:
           - GENERAL
           - PARAMETERS
           - STAGES
           - STEPS
+        secret: true
+        mandatory: true
+        resourceRef:
+          - name: orgAdminUserTokenCredentialsId
+            type: secret
       - name: userToken
         type: string
         description: "WhiteSource token identifying the user executing the scan"
-        mandatory: true
         scope:
           - GENERAL
           - PARAMETERS
           - STAGES
           - STEPS
+        secret: true
+        mandatory: true
+        resourceRef:
+          - name: userTokenCredentialsId
+            type: secret
       - name: licensingVulnerabilities
         type: bool
         description: "Whether license compliance is considered and reported as part of the assessment."
