--- a/resources/metadata/sonar.yaml
+++ b/resources/metadata/sonar.yaml
@@ -172,6 +172,39 @@ spec:
           - STAGES
           - STEPS
         default: https://api.github.com
+
+      # Global maven settings, should be added to all maven steps
+      - name: projectSettingsFile
+        type: string
+        description: "Path to the mvn settings file that should be used as project settings file."
+        scope:
+          - GENERAL
+          - STEPS
+          - STAGES
+          - PARAMETERS
+        aliases:
+          - name: maven/projectSettingsFile
+      - name: globalSettingsFile
+        type: string
+        description: "Path to the mvn settings file that should be used as global settings file."
+        scope:
+          - GENERAL
+          - STEPS
+          - STAGES
+          - PARAMETERS
+        aliases:
+          - name: maven/globalSettingsFile
+      - name: m2Path
+        type: string
+        description: "Path to the location of the local repository that should be used."
+        scope:
+          - GENERAL
+          - STEPS
+          - STAGES
+          - PARAMETERS
+        aliases:
+          - name: maven/m2Path
+
     secrets:
       - name: sonarTokenCredentialsId
         type: jenkins
