--- a/resources/metadata/sonar.yaml
+++ b/resources/metadata/sonar.yaml
@@ -72,6 +72,13 @@ spec:
           - PARAMETERS
           - STAGES
           - STEPS
+      - name: coverageExclusions
+        type: "[]string"
+        description: "A list of patterns that should be excluded from the coverage scan."
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
       - name: options
         type: "[]string"
         description: A list of options which are passed to the sonar-scanner.
