Remove legacy npm script name condition from cloudSdkStageDefaults

--- a/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
@@ -26,9 +26,8 @@ stages:
           - 'ci-it-frontend'
   frontendUnitTests:
     stepConditions:
-      frontendUnitTests:
+      npmExecuteScripts:
         npmScripts:
-          - 'ci-test'
           - 'ci-frontend-unit-test'
   npmAudit:
     stepConditions:
