--- a/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
@@ -20,6 +20,7 @@ stages:
       mavenExecuteIntegration:
         filePattern: 'integration-tests/pom.xml'
   compliance:
+    onlyProductiveBranch: true
     stepConditions:
       sonarExecuteScan:
         configKeys:
