--- a/resources/metadata/mavenExecute.yaml
+++ b/resources/metadata/mavenExecute.yaml
@@ -48,6 +48,7 @@ spec:
           - STEPS
           - STAGES
           - PARAMETERS
+        mandatory: false
         aliases:
           - name: maven/projectSettingsFile
       - name: globalSettingsFile
@@ -58,6 +59,7 @@ spec:
           - STEPS
           - STAGES
           - PARAMETERS
+        mandatory: false
         aliases:
           - name: maven/globalSettingsFile
       - name: m2Path
@@ -68,6 +70,7 @@ spec:
           - STEPS
           - STAGES
           - PARAMETERS
+        mandatory: false
         aliases:
           - name: maven/m2Path
       - name: logSuccessfulMavenTransfers
@@ -79,6 +82,7 @@ spec:
           - STAGES
           - PARAMETERS
         default: false
+        mandatory: false
         aliases:
           - name: maven/logSuccessfulMavenTransfers
   containers:
