--- a/resources/metadata/sonar.yaml
+++ b/resources/metadata/sonar.yaml
@@ -1,13 +1,15 @@
 metadata:
   name: sonarExecuteScan
   description: Executes the Sonar scanner
-  longDescription: The step executes the [sonar-scanner](https://docs.sonarqube.org/display/SCAN/Analyzing+with+SonarQube+Scanner) cli command to scan the defined sources and publish the results to a SonarQube instance.
+  longDescription: "The step executes the [sonar-scanner](https://docs.sonarqube.org/display/SCAN/Analyzing+with+SonarQube+Scanner)
+    cli command to scan the defined sources and publish the results to a SonarQube instance."
 spec:
   inputs:
     params:
       - name: instance
         type: string
-        description: "Jenkins only: The name of the SonarQube instance defined in the Jenkins settings. DEPRECATED: use host parameter instead"
+        description: "Jenkins only: The name of the SonarQube instance defined in the Jenkins settings.
+          DEPRECATED: use host parameter instead"
         scope:
           - PARAMETERS
           - STAGES
@@ -15,7 +17,7 @@ spec:
         default: "SonarCloud"
       - name: host
         type: string
-        description: The URL to the Sonar backend.
+        description: "The URL to the Sonar backend."
         scope:
           - PARAMETERS
           - STAGES
@@ -24,7 +26,7 @@ spec:
           - name: sonarServerUrl
       - name: token
         type: string
-        description: Token used to authenticate with the Sonar Server.
+        description: "Token used to authenticate with the Sonar Server."
         scope:
           - PARAMETERS
         secret: true
@@ -42,7 +44,8 @@ spec:
           - STEPS
       - name: customTlsCertificateLinks
         type: "[]string"
-        description: List of download links to custom TLS certificates. This is required to ensure trusted connections to instances with custom certificates.
+        description: "List of download links to custom TLS certificates.
+          This is required to ensure trusted connections to instances with custom certificates."
         scope:
           - PARAMETERS
           - STAGES
@@ -50,7 +53,7 @@ spec:
       - name: sonarScannerDownloadUrl
         type: string
         description: "URL to the sonar-scanner-cli archive."
-        default: https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.4.0.2170-linux.zip
+        default: "https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.4.0.2170-linux.zip"
         scope:
           - PARAMETERS
           - STAGES
@@ -98,15 +101,26 @@ spec:
           - STEPS
       - name: options
         type: "[]string"
-        description: A list of options which are passed to the sonar-scanner.
+        description: "A list of options which are passed to the sonar-scanner."
         scope:
           - PARAMETERS
           - STAGES
           - STEPS
+        aliases:
+          - name: sonarProperties
+            deprecated: true
       # Parameters for non-PR scans
       - name: branchName
         type: string
         description: "Non-Pull-Request only: Name of the SonarQube branch that should be used to report findings to."
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+      - name: inferBranchName
+        type: bool
+        description: "Jenkins only: Whether to infer the `branchName` parameter automatically based on the
+          `BRANCH_NAME` environment variable in non-productive runs of the pipeline."
         scope:
           - PARAMETERS
           - STAGES
@@ -175,21 +189,26 @@ spec:
             type: secret
       - name: disableInlineComments
         type: bool
-        description: "Pull-Request only: Disables the pull-request decoration with inline comments. DEPRECATED: only supported in SonarQube < 7.2"
+        description: "Pull-Request only: Disables the pull-request decoration with inline comments.
+         DEPRECATED: only supported in SonarQube < 7.2"
         scope:
           - PARAMETERS
           - STAGES
           - STEPS
       - name: legacyPRHandling
         type: bool
-        description: "Pull-Request only: Activates the pull-request handling using the [GitHub Plugin](https://docs.sonarqube.org/display/PLUG/GitHub+Plugin). DEPRECATED: only supported in SonarQube < 7.2"
+        description: "Pull-Request only: Activates the pull-request handling using
+          the [GitHub Plugin](https://docs.sonarqube.org/display/PLUG/GitHub+Plugin).
+          DEPRECATED: only supported in SonarQube < 7.2"
         scope:
           - PARAMETERS
           - STAGES
           - STEPS
       - name: githubApiUrl
         type: string
-        description: "Pull-Request only: The URL to the Github API. see [GitHub plugin docs](https://docs.sonarqube.org/display/PLUG/GitHub+Plugin#GitHubPlugin-Usage) DEPRECATED: only supported in SonarQube < 7.2"
+        description: "Pull-Request only: The URL to the Github API.
+          See [GitHub plugin docs](https://docs.sonarqube.org/display/PLUG/GitHub+Plugin#GitHubPlugin-Usage)
+          DEPRECATED: only supported in SonarQube < 7.2"
         scope:
           - GENERAL
           - PARAMETERS
@@ -232,10 +251,12 @@ spec:
     secrets:
       - name: sonarTokenCredentialsId
         type: jenkins
-        description: Jenkins 'Secret text' credentials ID containing the token used to authenticate with the Sonar Server.
+        description: "Jenkins 'Secret text' credentials ID containing the token used to authenticate
+          with the Sonar Server."
       - name: githubTokenCredentialsId
         type: jenkins
-        description: Jenkins 'Secret text' credentials ID containing the token used to authenticate with the Github Server.
+        description: "Jenkins 'Secret text' credentials ID containing the token used to authenticate
+          with the Github Server."
   outputs:
     resources:
       - name: influx
