--- a/resources/metadata/fortify.yaml
+++ b/resources/metadata/fortify.yaml
@@ -502,6 +502,14 @@ spec:
           - PARAMETERS
         aliases:
           - name: maven/m2Path
+      - name: verifyOnly
+        type: bool
+        description: Whether the step shall only apply verification checks or whether it does a full scan and check cycle
+        scope:
+          - PARAMETERS
+          - STAGES
+          - STEPS
+        default: false
   containers:
     - image: "ppiper/fortify"
       workingDir: "/home/piper"
