--- a/documentation/mkdocs.yml
+++ b/documentation/mkdocs.yml
@@ -35,6 +35,7 @@ nav:
                 - 'Integration Tests': stages/integration.md
                 - 'End to End Tests': stages/acceptance.md
                 - 'Security': stages/security.md
+                - 'Compliance': stages/compliance.md
                 - 'Performance': stages/performance.md
                 - 'Production Deployment': stages/release.md
             - 'Build Tools': pipelines/cloud-sdk/build-tools.md
